# crudhex

./: .gitignore  LICENCE  Makefile  README.md  pyproject.toml
.github/: pypublish.yaml
.github/workflows/: pypublish.yaml
crudgen/: __main__.py
crudgen/adapters/application/cli/: main.py
crudgen/adapters/infrastructure/loader/: fs_spec_loader.py
crudgen/adapters/infrastructure/template_writer/: db_entity_code_writer.py
crudgen/adapters/infrastructure/template_writer/config/: tempate_config.py
crudgen/domain/config/: SpecConfig.py
crudgen/domain/models/: __init__.py  entity.py  field.py  project_config.py
crudgen/domain/services/: __init__.py  config_context.py  db_entity_generator.py  dsl_parser.py  type_resolver.py
crudgen/domain/utils/: package_utils.py
crudhex/adapters/application/cli/: cli_helper.py  console_out_context.py  main.py
crudhex/adapters/application/cli/commands/: create_project.py  create_scaffolding.py  generate_crud.py
crudhex/adapters/infrastructure/loader/: fs_config_loader.py  fs_spec_loader.py  yaml_helper.py
crudhex/adapters/infrastructure/template_writer/: db_code_writer.py  db_entity_code_writer.py  domain_code_writer.py
crudhex/adapters/infrastructure/template_writer/adapters/: db_code_writer.py  domain_code_writer.py  mapper_code_writer.py  rest_code_writer.py
crudhex/adapters/infrastructure/template_writer/config/: tempate_config.py  template_config.py
crudhex/adapters/infrastructure/template_writer/services/: inflect_engine.py  template_env.py
crudhex/domain/models/: RelationData.py  __init__.py  app_config.py  entity.py  field.py  mapper.py  project_config.py
crudhex/domain/ports/: __init__.py
crudhex/domain/services/: __init__.py  config_context.py  db_adapter_generator.py  db_entity_generator.py  domain_generator.py  dsl_parser.py  generation_commons.py  project_config_context.py  rest_generator.py  type_resolver.py
crudhex/domain/services/common/: mapper_generator.py
crudhex/domain/services/data/: class_type_data.py
crudhex/domain/services/db/: adapter_generator.py  db_repository_generator.py  entity_generator.py  mapper_generator.py  repository_generator.py
crudhex/domain/services/domain/: command_generator.py  db_port_generator.py  model_generator.py  not_found_exception_generator.py  use_case_generator.py  use_case_port_generator.py
crudhex/domain/services/rest/: controller_generator.py  exception_handler_generator.py  mapper_generator.py  model_generator.py
crudhex/domain/utils/: class_type_utils.py  file_utils.py  module_utils.py  package_utils.py
doc/examples/config/: multi_mod_config.yaml  single_mod_config.yml
doc/examples/spec/: multiple_entities.yaml  single_example.yaml  with_relations.yaml
scripts/: jdk_classes_export.py
scripts/templates/: class_type_data.jinja2
tests/domain/models/: test_project_config.py
tests/domain/services/: test_dsl_parser.py
tests/fixtures/: id_full_spec.yaml  multi_types.yaml  single_type.yaml  with_relations_type.yaml
tests/fixtures/configs/: multi_mod.yaml  multi_mod_missing_src.yaml  multi_mod_not_exists_src.yaml  single_mod.yaml  single_mod_missing_src.yaml
tests/fixtures/specs/: multi_types.yaml
tests/utils/: file_utils.py
(+31 files in other folders)
